Funcionamiento de whenDeleteOnePersonThenResultOk y whenDeleteOnePersonNotFoundThenResultKo.
PENDIENTE: Finalizar los cuatro test restantes.